2007-11-13  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
	Handle std:target_uri gio links

2007-11-12  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
	Fix reversed checks

2007-11-08  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.in:
	* src/nautilus-image-properties-page.c:
	Add support for exempi >= 1.99.5 while keeping support for older
	versions.

2007-11-06  Sebastian Dröge  <slomo@circular-chaos.org>

	* NEWS:
	* docs/key_mouse_navigation.txt:
	* libnautilus-private/nautilus-emblem-utils.c:
	* libnautilus-private/nautilus-emblem-utils.h:
	* src/file-manager/fm-properties-window.c:
	* src/nautilus-emblem-sidebar.c:
	* src/nautilus-property-browser.c:
	Fix typo: availible -> available.

2007-11-06  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-program-choosing.c:
	Update to the new GAppInfo and EelAppLaunchContext APIs
	Remove old startup notify code

2007-11-05  Jürg Billeter  <j@bitron.ch>

	reviewed by: Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-actions.h:
	* src/file-manager/fm-directory-view.c:
	(action_open_folder_window_callback), (open_one_in_folder_window),
	(action_location_open_folder_window_callback),
	(real_update_location_menu), (real_update_menus):
	* src/file-manager/nautilus-directory-view-ui.xml:
	* src/nautilus-actions.h:
	* src/nautilus-navigation-window-menus.c:
	(nautilus_navigation_window_update_spatial_menu_item),
	(action_folder_window_callback),
	(nautilus_navigation_window_initialize_menus):
	* src/nautilus-navigation-window-ui.xml:
	* src/nautilus-navigation-window.c:
	(nautilus_navigation_window_init), (always_use_browser_changed):
	* src/nautilus-window-private.h:
	Add menu item to open spatial folder window from browser window to File
	menu and context menus.
